--- a/index.html
+++ b/index.html
@@ -486,11 +486,11 @@
                         <div class="text">2020 BIJOY SIR TUTION LAST DAY PICTURE</div>
                     </div>
 
-                    <div class="mySlides fade">
+<!--                     <div class="mySlides fade">
                         <div class="numbertext">10 / 12</div>
-                        <img src="s10.jpg" style="width:100%">
-                        <div class="text">FRIEND'S(ARNAB,SOUVIK,JOYDEV)</div>
-                    </div>
+                        <img src="s1.jpg" style="width:100%">
+                        <div class="text">FRIEND'S(ARNAB,SOUVIK,)</div>
+                    </div> -->
 
                     <div class="mySlides fade">
                         <div class="numbertext">11 / 12</div>
@@ -514,7 +514,7 @@
                         <span class="dot"></span>
                         <span class="dot"></span>
                         <span class="dot"></span>
-                        <span class="dot"></span>
+<!--                         <span class="dot"></span> -->
                         <span class="dot"></span>
                         <span class="dot"></span>
                     </div>
