--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             padding-bottom: 6px;
         }
 
-        .icon {
+        .icons {
             color: #008069;
         }
 
@@ -200,7 +200,7 @@
             float: right;
         }
 
-        .icon {
+        .icons {
             float: left;
             color: #008069;
         }
@@ -434,54 +434,54 @@
                 <div class="slideshow-container">
 
                     <div class="mySlides fade">
-                        <div class="numbertext">1 / 12</div>
+                        <div class="numbertext">1 / 10</div>
                         <img src="s1.jpg" style="width:100%">
                         <div class="text">2021 DURGAPUJA MY PICTURE</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">2 / 12</div>
+                        <div class="numbertext">2 / 10</div>
                         <img src="s2.jpg" style="width:100%">
                         <div class="text">2022 DURGAPUJA MY PICTURE</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">3 / 12</div>
+                        <div class="numbertext">3 / 10</div>
                         <img src="s3.jpg" style="width:100%">
                         <div class="text">2021 DURGAPUJA MY PICTURE</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">4 / 12</div>
+                        <div class="numbertext">4 / 10</div>
                         <img src="s4.jpg" style="width:100%">
                         <div class="text">2019 DURGAPUJA <br> MY PICTURE</div>
                     </div>
                     <div class="mySlides fade">
-                        <div class="numbertext">5 / 12</div>
+                        <div class="numbertext">5 / 10</div>
                         <img src="s5.jpg" style="width:100%">
                         <div class="text">ASANSOL PARK MY PICTURE</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">6 / 12</div>
+                        <div class="numbertext">6 / 10</div>
                         <img src="s6.jpg" style="width:100%">
                         <div class="text">2020 DURGAPUJA MY PICTURE</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">7 / 12</div>
+                        <div class="numbertext">7 / 10</div>
                         <img src="s7.jpg" style="width:100%">
                         <div class="text">2020 DURGAPUJA MY PICTURE</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">8 / 12</div>
+                        <div class="numbertext">8 / 10</div>
                         <img src="s8.jpg" style="width:100%">
                         <div class="text">MY CHILDHOOD PICTURE</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">9 / 12</div>
+                        <div class="numbertext">9 / 10</div>
                         <img src="s9.jpg" style="width:100%">
                         <div class="text">2020 BIJOY SIR TUTION LAST DAY PICTURE</div>
                     </div>
@@ -493,16 +493,16 @@
                     </div> -->
 
                     <div class="mySlides fade">
-                        <div class="numbertext">11 / 12</div>
+                        <div class="numbertext">10 / 10</div>
                         <img src="s11.jpg" style="width:100%">
                         <div class="text">2021 KALI-PUJA MY PICTURE</div>
                     </div>
-
+<!-- 
                     <div class="mySlides fade">
                         <div class="numbertext">12 / 12</div>
                         <img src="s12.jpg" style="width:100%">
                         <div class="text">DURGAPUR RAIL-STATION WITH ABIR GHOSH</div>
-                    </div>
+                    </div> -->
 
                     <div style="text-align:center">
                         <span class="dot"></span>
@@ -516,7 +516,7 @@
                         <span class="dot"></span>
 <!--                         <span class="dot"></span> -->
                         <span class="dot"></span>
-                        <span class="dot"></span>
+                        <!-- <span class="dot"></span> -->
                     </div>
                 </div>
             </div>
@@ -525,50 +525,50 @@
             <div class="subheading" id="SOCIAL">Social</div>
             <div class="social">
                 <a href="https://www.facebook.com/profile.php?id=100037608103246&sk=grid" target="_blank">
-                    <div class="icon">
+                    <div class="icons">
                         <span style="padding-left:10px;"></span>
                         <div class="fab fa-facebook-square">Facebook</div>
                     </div>
                 </a>
                 <a href="https://www.instagram.com/souvik_dey_28/" target="_blank">
-                    <div class="icon">
+                    <div class="icons">
                         <span style="padding-left:10px;"></span>
                         <div class="fab fa-instagram">Instagram</div>
                     </div>
                 </a>
                 <a href="https://github.com/souvik-dey-28" target="_blank">
-                    <div class="icon">
+                    <div class="icons">
                         <span style="padding-left:10px;"></span>
                         <div class="fab fa-github">Github</div>
                     </div>
                 </a>
                 <a href="https://wa.me/+917908535841?text=Hi%20%2C%20Souvik%20Dey.%0AHow%20are%20you%3F"
                     target="_blank">
-                    <div class="icon">
+                    <div class="icons">
                         <span style="padding-left:10px;"></span>
                         <div class="fab fa-whatsapp">Whatsapp</div>
                     </div>
                 </a>
                 <a href="https://t.me/souvik_dey_28" target="_blank">
-                    <div class="icon">
+                    <div class="icons">
                         <span style="padding-left:10px;"></span>
                         <div class="fab fa-telegram">Telegram</div>
                     </div>
                 </a>
                 <a href="mailto:deysouvik123456@gmail.com" target="_blank">
-                    <div class="icon">
+                    <div class="icons">
                         <span style="padding-left:10px;"></span>
                         <div class="fa fa-envelope">Email</div>
                     </div>
                 </a>
                 <a href="tel:+917908535841" target="_blank">
-                    <div class="icon">
+                    <div class="icons">
                         <span style="padding-left:10px;"></span>
                         <div class="fas fa-phone-square-alt"> Call Me </div>
                     </div>
                 </a>
                 <a href="sms:+917908535841" target="_blank">
-                    <div class="icon">
+                    <div class="icons">
                         <span style="padding-left:10px;"></span>
                         <div class="fas fa-sms"> Msg Me </div>
                     </div>
